# axis-axis1-c

./: .cvsignore  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.am_bin  Makefile.in  Makefile.in_bin  README  axis.spec  axisconfigure  backupconf.xml  build.AIX.properties  build.Linux.properties  build.OS400.properties  build.SunOS.properties  build.Win32.properties  build.sh  build.sh_sample  build.xml  buildApache13Module.xml  buildApache20Module.xml  buildClient.xml  buildDocumentation.xml  buildInitialize.xml  buildSamples.xml  buildServerEngine.xml  buildSimpleAxisServer.xml  buildTraceTool.xml  buildTransport.xml  buildWSDL2Ws.xml  buildXMLParser.xml  configure  configure.ac  configure.ac_bin  configure_bin  mkinstalldirs  package.xml  platform.mk  runconfig  (+5 more)
c/: INSTALL  Makefile.am  Makefile.in  build.sh  build.sh_sample  configure  configure.ac  inc.mk  platform.mk  runconfig  temp.sh
c/deploy/: axiscpp.conf_linux  axiscpp.conf_sample  axiscpp.conf_win  deploy.sh  deploy.sh_apache  deploy.sh_apache2  deploy_apache2.sh  server.wsdd
c/docs/: TODO.txt  build.txt  developer-guide.txt  developers-guide.html  index.html  integration-guide.html  portability & best practices-guide.html
c/kdevelop/: axiscpp.kdevprj
c/src/: Makefile  Makefile.am  Makefile.in
c/tests/: alltests.dsw  build.sh  configure.ac  runconfig
c/vc/: AxisClientDLL.dsp  AxisClientDLL.vcproj  AxisDevelopment.dsw  AxisDevelopment.sln  AxisServerDLL.dsp  AxisServerDLL.vcproj  Distribution.dsw  Distribution.sln
samples/: Makefile.in  configure.ac  readme.txt  server.wsdd.linux  server.wsdd.win32
samples/client/: Makefile.am  Makefile.in  build.sh  configure.ac  run.sh  run_interoptests.bat  run_interoptests.sh
samples/server/: Makefile.am  Makefile.in  autogen.sh  configure.ac
src/: Makefile.am  Makefile.in
src/cbindings/: AxisC.cpp  AxisExceptionC.cpp  AxisObjectContainer.hpp  AxisObjectConverter.cpp  AxisObjectConverter.hpp  BasicNodeC.cpp  IAttributeC.cpp  IHeaderBlockC.cpp  INamespaceC.cpp  ISoapFaultC.cpp  IWrapperSoapDeSerializerC.cpp  IWrapperSoapSerializerC.cpp
src/client/: Call.h  Makefile.am  Makefile.in  Transporter.c  runconfig
src/common/: AccessBean.h  AdminUtils.cpp  AdminUtils.h  ArrayBean.cpp  ArrayBean.h  AxisCPPConfigDefaults.cpp  AxisCPPConfigDefaultsImpl.cpp  AxisCPPConfigDefaultsImpl.hpp  AxisConfig.cpp  AxisConfig.h  AxisConfigException.cpp  AxisConfigException.h  AxisException.cpp  AxisException.h  AxisFile.h  AxisGenException.cpp  AxisGenException.h  AxisMessage.cpp  AxisMessage.h  AxisSocketUtils.cpp  AxisSocketUtils.h  AxisTime.cpp  AxisTime.h  AxisTrace.cpp  AxisTrace.h  AxisUserAPI.cpp  AxisUserAPI.h  AxisUtils.cpp  AxisUtils.h  BasicHandler.h  BasicTypeSerializer.cpp  BasicTypeSerializer.h  ComplexObjectHandler.h  Debug.cpp  Debug.h  GDefine.cpp  GDefine.h  Handler.h  IAccessBean.h  IAdminUtils.h  (+27 more)
src/configuration/: AxisConfiguration.cpp  AxisConfiguration.hpp  AxisConfigurationLibraries.cpp  AxisConfigurationLibraries.hpp  FileFunctions.cpp  FileFunctions.hpp  Instructions.cpp  Instructions.hpp  ListMethods.cpp  ListMethods.hpp  MissingCFunctions.cpp  MissingCFunctions.hpp
src/engine/: AppScopeHandlerPool.cpp  AppScopeHandlerPool.h  Axis.cpp  AxisEngine.cpp  AxisEngine.h  AxisEngineException.cpp  AxisEngineException.h  ClientAxisEngine.cpp  ClientAxisEngine.h  DeserializerPool.cpp  DeserializerPool.h  HandlerChain.cpp  HandlerChain.h  HandlerLoader.cpp  HandlerLoader.h  HandlerLoaderTest.cpp  HandlerPool.cpp  HandlerPool.h  Main.c  Main.cpp  Makefile  Makefile.am  Makefile.in  RequestScopeHandlerPool.cpp  RequestScopeHandlerPool.h  SOAPTransportFactory.cpp  SOAPTransportFactory.h  SerializerPool.cpp  SerializerPool.h  ServerAxisEngine.cpp  ServerAxisEngine.h  SessionScopeHandlerPool.cpp  SessionScopeHandlerPool.h  SharedObject.cpp  SharedObject.h  XMLParserFactory.cpp  XMLParserFactory.h
src/guththila/: Array.hpp  Attribute.hpp  Buffer.hpp  Depth.hpp  FileInputStream.cpp  FileInputStream.hpp  InputStream.hpp  Makefile.am  Makefile.in  Namespace.hpp  Token.hpp  XmlPullParser.cpp  XmlPullParser.hpp  XmlPullParserException.hpp  history.xml  unicode.cpp  unicode.hpp
src/server/: Makefile  Makefile.am  Makefile.in
src/soap/: Attribute.cpp  Attribute.h  AxisSoapException.cpp  AxisSoapException.h  BasicNode.cpp  BasicNode.h  CharacterElement.cpp  CharacterElement.h  ComplexElement.cpp  ComplexElement.h  ContentIdSet.cpp  ContentIdSet.hpp  HeaderBlock.cpp  HeaderBlock.h  HeaderEntry.cpp  HexCoder.cpp  HexCoder.h  Makefile  Makefile.am  Makefile.am_expat  Makefile.in  Namespace.cpp  Namespace.h  OtherFaultException.cpp  SoapAttachementHeaders.cpp  SoapAttachementHeaders.hpp  SoapAttachment.cpp  SoapAttachment.hpp  SoapAttachmentHeaders.cpp  SoapAttachmentHeaders.hpp  SoapAttachmentReference.cpp  SoapAttachmentReference.hpp  SoapBinInputStream.cpp  SoapBinInputStream.h  SoapBody.cpp  SoapBody.h  SoapDeSerializer.cpp  SoapDeSerializer.h  SoapEnvVersions.h  SoapEnvelope.cpp  (+25 more)
src/transport/: Makefile  Makefile.am  Makefile.in  SOAPTransport.h  SSLChannel.hpp
src/wcg/: BeanClass.cpp  BeanClass.h  Deploy.cpp  File.h  HeaderFile.cpp  HeaderFile.h  Makefile.am  Method.cpp  Method.h  TranslationUnit.cpp  TranslationUnit.h  Variable.cpp  Variable.h  WCGenerator.cpp  WCGenerator.h  WSClass.cpp  WSClass.h  actions.cpp  actions.h  cpp.l  cpp.y  cpplex.cpp  cppyacc.hpp  runconfig
src/wsdd/: AxisWsddException.cpp  AxisWsddException.h  Makefile  Makefile.am  Makefile.in  WSDDDeployment.cpp  WSDDDeployment.h  WSDDDocument.cpp  WSDDDocument.h  WSDDDocumentExpat.cpp  WSDDDocumentExpat.h  WSDDDocumentXerces.cpp  WSDDDocumentXerces.h  WSDDHandler.cpp  WSDDHandler.h  WSDDKeywords.cpp  WSDDKeywords.h  WSDDService.cpp  WSDDService.h  WSDDTransport.cpp  WSDDTransport.h
src/wsdl/: .classpath  build.xml  create-wsdl2ws.sh
src/xml/: AnyElement.h  Attribute.cpp  AxisParseException.cpp  AxisParseException.h  Element.cpp  Event.cpp  Event.h  Makefile.am  Makefile.in  QName.cpp  QName.h  SimpleAttribute.cpp  SimpleAttribute.h  StartElement.cpp  StartElement.h  XMLParser.h
(+5430 files in other folders)
