noinst_LTLIBRARIES = libcommon.la

libcommon_la_SOURCES = Param.cpp TypeMapping.cpp Packet.cpp MessageData.cpp AxisTrace.cpp \
 BasicTypeSerializer.cpp AxisException.cpp ArrayBean.cpp AccessBean.cpp AxisTime.cpp \
 GDefine.cpp AxisUtils.cpp

#libcommon_la_LIBADD = -L$(XERCES_HOME)/lib -lxerces-c
INCLUDES = -I$(AXISCPP_HOME)/include
